--- a/styles/report.css
+++ b/styles/report.css
@@ -1,3 +1,7 @@
+.table-wrapper {
+    position: relative;
+}
+
 table {
     text-align-last: center;
     -moz-text-align-last: center;
@@ -7,4 +11,64 @@ table {
 table thead tr:first-child {
     background-color: #0f6cbf;
     color: white;
+}
+
+table tbody tr td.dtr-control:before {
+    float: left;
+}
+
+table tbody tr td button[class*="patch-action"]:not(:first-child) {
+    margin-left: 0.5rem;
+}
+
+/*Datatable Loader*/
+.datatable-loader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+.datatable-loader-overlay {
+    display: flex;
+    padding: 20px;
+    border-radius: 20px;
+    backdrop-filter: blur(2px);
+}
+.datatable-loader .text {
+    color: #0a0a0a;
+    font-size: 1rem;
+    font-weight: bolder;
+    margin-left: 1rem;
+}
+.datatable-loader .loader {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    position: relative;
+    animation: rotate 1s linear infinite;
+}
+.datatable-loader .loader::before {
+    content: "";
+    box-sizing: border-box;
+    position: absolute;
+    inset: 0px;
+    border-radius: 50%;
+    border: 5px solid #2196F3;
+    animation: prixClipFix 2s linear infinite;
+}
+
+@keyframes rotate {
+    100%   {transform: rotate(360deg)}
+}
+
+@keyframes prixClipFix {
+    0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+    25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+    50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+    75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+    100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
 }
