--- a/templates/report.mustache
+++ b/templates/report.mustache
@@ -1,31 +1,35 @@
-<table id="reporttable" class="table table-striped table-bordered nowrap" style="width:100%">
-    <thead>
-    <tr>
-        <th>{{#str}} datatable:name, local_securitypatcher {{/str}}</th>
-        <th>{{#str}} datatable:filename, local_securitypatcher {{/str}}</th>
-        <th>{{#str}} datatable:applied, local_securitypatcher {{/str}}</th>
-        <th>{{#str}} datatable:created, local_securitypatcher {{/str}}</th>
-        <th>{{#str}} datatable:modified, local_securitypatcher {{/str}}</th>
-        <th>{{#str}} datatable:actions, local_securitypatcher {{/str}}</th>
-    </tr>
-    </thead>
-    <tbody>
-        {{#data}}
-            <tr>
-                <td>{{name}}</td>
-                <td>{{filename}}</td>
-                <td>{{created}}</td>
-                <td>{{modified}}</td>
-                <td>{{applied}}</td>
-                <td>
-                    <ul class="list-actions">
-                    </ul>
-                </td>
-            </tr>
-        {{/data}}
-    </tbody>
-</table>
-
+<div class="table-wrapper">
+    <div class="datatable-loader">
+        <div class="datatable-loader-overlay">
+            <div class="loader"></div>
+            <span class="text">{{#str}} loading, local_securitypatcher {{/str}}.</span>
+        </div>
+    </div>
+    <table id="reporttable" class="table table-striped table-bordered nowrap" style="width:100%">
+        <thead>
+        <tr>
+            <th>{{#str}} datatable:name, local_securitypatcher {{/str}}</th>
+            <th>{{#str}} datatable:created, local_securitypatcher {{/str}}</th>
+            <th>{{#str}} datatable:modified, local_securitypatcher {{/str}}</th>
+            <th>{{#str}} datatable:applied, local_securitypatcher {{/str}}</th>
+            <th>{{#str}} datatable:restored, local_securitypatcher {{/str}}</th>
+            <th>{{#str}} datatable:actions, local_securitypatcher {{/str}}</th>
+        </tr>
+        </thead>
+        <tbody>
+            {{#data}}
+                <tr>
+                    <td>{{name}}</td>
+                    <td>{{created}}</td>
+                    <td>{{modified}}</td>
+                    <td>{{applied}}</td>
+                    <td>{{restored}}</td>
+                    <td>{{{actions}}}</td>
+                </tr>
+            {{/data}}
+        </tbody>
+    </table>
+<div class="table-wrapper">
 {{#js}}
     require(['local_securitypatcher/report'], function(Report) {
         Report.init();
