--- a/styles/patches.css
+++ b/styles/patches.css
@@ -21,6 +21,11 @@ table tbody tr td button[class*="patch-action"]:not(:first-child) {
     margin-left: 0.5rem;
 }
 
+.new-patch-btn {
+    text-align: right;
+    margin-bottom: 0.5rem;
+}
+
 /*Datatable Loader*/
 .datatable-loader {
     position: absolute;
@@ -55,7 +60,7 @@ table tbody tr td button[class*="patch-action"]:not(:first-child) {
     content: "";
     box-sizing: border-box;
     position: absolute;
-    inset: 0px;
+    inset: 0;
     border-radius: 50%;
     border: 5px solid #2196F3;
     animation: prixClipFix 2s linear infinite;
