--- a/templates/patches.mustache
+++ b/templates/patches.mustache
@@ -1,3 +1,8 @@
+<div class="new-patch-btn">
+    <a class="btn btn-primary" role="button" href="/local/securitypatcher/patch.php">
+        {{#str}} new_patch_button, local_securitypatcher {{/str}}
+    </a>
+</div>
 <div class="table-wrapper">
     <div class="datatable-loader">
         <div class="datatable-loader-overlay">
